==> vincent290587/myWatch/libraries/MAX30102/MAX30102.cpp <==
#include "I2C.h"
#include "Arduino.h"
#include "MAX30102.h"
#define NRF_LOG_MODULE_NAME "MAX"
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#define MAX30102_ADDR 0x57

boolean MAX30102::begin() {

	_i2caddr = MAX30102_ADDR;

	uint8_t part_id = readPartID();
	// Step 1: Initial Communciation and Verification
	// Check that a MAX30102 is connected
	if (part_id != MAX_30102_EXPECTEDPARTID) {
		// Error -- Part ID read from MAX30102 does not match expected part ID.
		NRF_LOG_ERROR("Part ID read (0x%X) does not match\r\n", part_id);
		return false;
	}

	NRF_LOG_INFO("Device ID 0x%X\r\n", part_id);

	// Populate revision ID
	readRevisionID();

	return true;
}

int MAX30102::check(void)
{
	//Read register FIDO_DATA in (3-byte * number of active LED) chunks
	//Until FIFO_RD_PTR = FIFO_WR_PTR

	uint8_t data_buffer[I2C_BUFFER_LENGTH];

	byte readPointer = getReadPointer();
	byte writePointer = getWritePointer();

	int numberOfSamples = 0;

	//Do we have new data?
	if (readPointer != writePointer)
	{
		//Calculate the number of readings we need to get from sensor
		numberOfSamples = writePointer - readPointer;
		if (numberOfSamples < 0) numberOfSamples += 32; //Wrap condition

		//NRF_LOG_INFO("Samples available: %u\r\n", numberOfSamples);

		//We now have the number of readings, now calc bytes to read
		//For this example we are just doing Red and IR (3 bytes each)
		int bytesLeftToRead = numberOfSamples * activeLEDs * 3;

		//NRF_LOG_INFO("Bytes to read: %u\r\n", bytesLeftToRead);

		//We may need to read as many as 288 bytes so we read in blocks no larger than I2C_BUFFER_LENGTH
		//I2C_BUFFER_LENGTH changes based on the platform. 64 bytes for SAMD21, 32 bytes for Uno.
		//Wire.requestFrom() is limited to BUFFER_LENGTH which is 32 on the Uno
		while (bytesLeftToRead >= activeLEDs * 3)
		{
			int toGet = bytesLeftToRead;
			if (toGet > I2C_BUFFER_LENGTH)
			{
				//If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
				//32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
				//32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

				toGet = I2C_BUFFER_LENGTH - (I2C_BUFFER_LENGTH % (activeLEDs * 3)); //Trim toGet to be a multiple of the samples we need to read
			}

			bytesLeftToRead -= toGet;

			if (readDataBlock(MAX30102_FIFODATA, data_buffer, toGet) != toGet) {
				NRF_LOG_ERROR("Bloc read problem !\r\n");
				return 0;
			} else {
				//NRF_LOG_WARNING("Reading %u bytes\r\n", toGet);
			}

			while (toGet > 0)
			{
				sense.head++; //Advance the head of the storage struct
				sense.head %= STORAGE_SIZE; //Wrap condition

				byte temp[sizeof(uint32_t)]; //Array of 4 bytes that we will convert into long
				uint32_t tempLong;

				//Burst read three bytes - RED
				temp[3] = 0;
				temp[2] = data_buffer[0];
				temp[1] = data_buffer[1];
				temp[0] = data_buffer[2];

				//Convert array to long
				memcpy(&tempLong, temp, sizeof(tempLong));

				tempLong &= 0x3FFFF; //Zero out all but 18 bits

				sense.red[sense.head] = tempLong; //Store this reading into the sense array

				if (activeLEDs > 1)
				{
					//Burst read three more bytes - IR
					temp[3] = 0;
					temp[2] = data_buffer[3];
					temp[1] = data_buffer[4];
					temp[0] = data_buffer[5];

					//Convert array to long
					memcpy(&tempLong, temp, sizeof(tempLong));

					tempLong &= 0x3FFFF; //Zero out all but 18 bits

					sense.IR[sense.head] = tempLong;
				}

				if (activeLEDs > 2)
				{
					//Burst read three more bytes - Green
					temp[3] = 0;
					temp[2] = data_buffer[6];
					temp[1] = data_buffer[7];
					temp[0] = data_buffer[8];

					//Convert array to long
					memcpy(&tempLong, temp, sizeof(tempLong));

					tempLong &= 0x3FFFF; //Zero out all but 18 bits

					sense.green[sense.head] = tempLong;
				}

				toGet -= activeLEDs * 3;
			}

		} //End while (bytesLeftToRead > 0)

	} //End readPtr != writePtr


	return (numberOfSamples); //Let the world know how much new data we found
}

bool MAX30102::safeCheck(uint8_t maxTimeToCheck)
{
	uint32_t markTime = millis();

	while(1)
	{
		if(millis() - markTime > maxTimeToCheck) return(false);

		if(check() == true) //We found new data!
			return(true);

		delay(1);
	}
}

bool MAX30102::writeRegister8(uint8_t address, uint8_t reg, uint8_t value) {

	return i2c_write_reg_8(MAX30102_ADDR, reg, value);

}

uint8_t MAX30102::readRegister8(uint8_t address, uint8_t reg) {


	uint8_t res = 0xFF;

	if (!i2c_write8(MAX30102_ADDR, reg)) {
		//return 0xFF;
	}

	// repeated start
	if (!i2c_read8(MAX30102_ADDR, &res)) {
		return 0xFF;
	}

	return res;
}
